# bsc-thesis

./: .gitignore  Makefile  README.md  proposal.tex  references.bib  thesis.tex
benchmarks/: Cargo.toml  LICENSE  README.md  run.sh
benchmarks/src/: README.md  common.rs  config.rs  endpoint.rs  hibench.rs  integrity.rs  main.rs  nexmark.rs  statistics.rs  test.rs  ysb.rs
benchmarks/src/operators/: epochwindow.rs  filtermap.rs  join.rs  mod.rs  partition.rs  reduce.rs  rollingcount.rs  session.rs  timer.rs  window.rs
content/: 1-introduction.tex  2-preliminaries.tex  2-related-work.tex  3-preliminaries.tex  3-related-work.tex  3-timely-dataflow.tex  4-framework.tex  4-ysb.tex  5-hibench.tex  5-ysb.tex  6-hibench.tex  6-nexmark.tex  7-conclusion.tex  7-nexmark.tex  8-conclusion.tex  abstract.tex  acknowledgements.tex  references.bib
data/: 10000000@1.csv  10000000@16.csv  10000000@2.csv  10000000@32-bp.csv  10000000@32-w120.csv  10000000@32-w120s10.csv  10000000@32-w120s20.csv  10000000@32-w120s40.csv  10000000@32-w120s60.csv  10000000@32-w20.csv  10000000@32-w20s10.csv  10000000@32-w20s5.csv  10000000@32-w40.csv  10000000@32-w40s10.csv  10000000@32-w40s20.csv  10000000@32-w40s5.csv  10000000@32-w60.csv  10000000@32-w60s10.csv  10000000@32-w60s20.csv  10000000@32-w60s30.csv  10000000@32-w60s5.csv  10000000@32-w80.csv  10000000@32-w80s10.csv  10000000@32-w80s20.csv  10000000@32-w80s40.csv  10000000@32-w80s5.csv  10000000@32.csv  10000000@4.csv  10000000@8.csv  1000000@1.csv  1000000@16.csv  1000000@2.csv  1000000@32.csv  1000000@4.csv  1000000@8.csv  100000@16.csv  100000@32.csv  100000@8.csv  10000@16.csv  10000@32.csv  (+24 more)
presentation/: presentation.tex
systems-cover/: inf-logo.eps  systems-cover.sty
