[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Shinmera <shinmera@tymoon.eu>"]

[dependencies]
rdkafka = "0.14"
#timely = "0.5"
timely_communication = "0.5"
abomonation = "0.5"
abomonation_derive = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
rand = "*"
num = "*"
fnv = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.kafkaesque]
#path = "../../timely-dataflow/kafkaesque"
git = "https://github.com/frankmcsherry/timely-dataflow.git"

[dependencies.timely]
path = "../../timely-dataflow"
#[dependencies.timely]
#git = "https://github.com/frankmcsherry/timely-dataflow.git"

#[dependencies.timely_communication]
#git = "https://github.com/frankmcsherry/timely-dataflow.git"
